# arxiv-biboverlay-ads-tokens

./: .gitignore  .python-version  Dockerfile  Pipfile  README.md  bootstrap.py  config.py  createdb.py  database.sql  docker-compose.yml  pyproject.toml  requirements.txt  uwsgi.ini  uwsgi.py  wsgi.py
abovl/: __init__.py  ads_oauth_service.py  app.py  config.py  models.py  utils.py  views.py
alembic/versions/: 2d6221a53fbe_.py
arxiv_biboverlay_ads_tokens/: __init__.py  ads_oauth_service.py  app.py  config.py  date_utils.py  utils.py  views.py
deploy/: buildandpush.sh  cert-upload.sh  computegroup.sh  config.sh  make-load-balancer.sh  update-instance-group.sh
tests/: test_arxiv_biboverlay_ads_tokens.py
