[tool.poetry]
name = "arxiv-biboverlay-ads-tokens"
version = "0.1.0"
description = ""
authors = ["Brian D. Caruso <bdc34@cornell.edu>"]

[tool.poetry.dependencies]
python = "^3.8.7"
flask = "^1.1"
uwsgi = "^2.0"
flask-session="*"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
